--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 
     compile 'com.google.maps.android:android-maps-utils:0.4'
 
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+
     compile files('libs/volley_20150813.jar')
     compile files('libs/gson-2.3.1.jar')
 }
