--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <application
         android:name=".appdata.AppController"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -63,7 +63,7 @@
             android:name=".MosqueHome"
             android:label="@string/mosque_home_activity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
         /*************************************NAMAJI HOME ACTIVITY*************************************/
@@ -71,7 +71,7 @@
             android:name=".NamajiHome"
             android:label="@string/namaji_home_activity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
         /*************************************SEARCH RESULT ACTIVITY*************************************/
